refactor, update deprecated java methods, and clean code smells